# voucher_creator

./: .gitignore  CLAUDE.md  CROSS_COMPILE_MAC_TO_UBUNTU.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  SERVER_DEPLOYMENT.md  TAILWIND_MIGRATION.md  UI_IMPROVEMENTS_SUMMARY.md  VOUCHER_TEMPLATES.md  config.toml  install.sh  vouchers.db
.github/workflows/: clippy.yaml
src/: config.rs  database.rs  main.rs  qr_generator.rs  templates.rs  voucher.rs  wifi_network.rs
templates/: admin.html  index.html  network-vouchers.html  no-vouchers.html  response.html  voucher-card.html  vouchers.html
