[package]
name = "pfsense_portal_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Template engine
askama = "0.12"
askama_axum = "0.4"

# QR code generation
qrcode = "0.14"
image = "0.24"

# CSV parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# File upload handling
multer = "3.0"
bytes = "1.5"
futures = "0.3"

# Base64 encoding for embedded images
base64 = "0.21"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for unique filenames
uuid = { version = "1.6", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Random number generation
rand = "0.8"